[TL] Tries to clean up styles a bit

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -211,10 +211,10 @@ th {
 
 tr {
     font-size: 90%;
+    border-bottom: 1px solid $grey-color;
 }
 
 table {
-    border: 1px solid $grey-color;
 }
 
 .post-excerpt {
